<resources>
    <string name="app_name">Turahan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottombar">bottombar</string>
    <string name="appname">TURAHAN</string>
    <string name="username">Username</string>

    <!--  Titles  -->
    <string name="first_slide_title">Pickup Donation</string>
    <string name="second_slide_title">Drop Off Donation</string>
    <string name="third_slide_title">Get Points</string>
    <!--  Description  -->
    <string name="first_slide_description">Sharing food is easier by waiting for the courier to come to your house</string>
    <string name="second_slide_description">You can share food by visiting some of our drop points</string>
    <string name="third_slide_description">Earn points after making a donation and get a reward</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="isi_field">Harap isi semua field</string>
    <string name="pwSalah">Password incorrect</string>
    <string name="suSucceed">Create Account Succeeded, Please Login</string>

    <string-array name="spinnerarray">
        <item>All Reward</item>
        <item>E-Voucher</item>
        <item>Merchandise</item>
    </string-array>
    <string name="title_activity_donasi_berhasil">Donation Succeeded</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="usernameProfile">Username</string>
    <string name="phoneNumberProfile">Phone Number</string>
    <string name="addressProfile">Address</string>
    <string name="cityProfile">City</string>
    <string name="postalCodeProfile">Postal Code</string>
    <string name="donateBtnCustomAddress">Donate</string>
    <string name="pickUpAddressCustomAddress">Pick Up Address</string>
    <string name="defaultAddressCustomAddress">Use Default Address</string>
    <string name="addressCustomAddress">Address</string>
    <string name="completeAddressHintCustomAddress">Fill in your complete address</string>
    <string name="detail_custom_address">Guidance</string>
    <string name="guide_custom_address">Guide for volunteer</string>
    <string name="address_title_custom_address">Address Title</string>
    <string name="address_title_description_custom_address">Private House, Office</string>
    <string name="donation_donation_detail">Donation</string>
    <string name="waiting_approval_donation_detail">Waiting Approval</string>
    <string name="donation_type_donation_detail">Donation Type</string>
    <string name="donation_id_donation_detail">Donation ID</string>
    <string name="status_donation_detail">Status</string>
    <string name="check_status_update_donation_detail">Check Status Update</string>
    <string name="cancel_donation_donation_detail">Cancel Donation</string>
    <string name="donation_history">DONATION HISTORY</string>
    <string name="waiting_payment_donation_process">Waiting for payment</string>
    <string name="payment_desc_donation_process">Immediately make the transfer before</string>
    <string name="virtual_account_number">Virtual Account Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_time">Payment Time</string>
    <string name="update_status">Update Status</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="help">Help</string>
    <string name="donation_report">DONATION REPORT</string>
    <string name="total_point">Total of Point</string>
    <string name="current_point">Current Point</string>
    <string name="times_donate">Times Donate</string>
    <string name="thank_you">Thank You!</string>
    <string name="desc_donation_succeeded">Your donation is confirmed and will be distributed soon</string>
    <string name="date">Date</string>
    <string name="drop_off">Drop Off</string>
    <string name="donation_title">Donation Title</string>
    <string name="choose_food_category">Choose Food Category</string>
    <string name="eatable">Eatable</string>
    <string name="uneatable">Uneatable</string>
    <string name="upload_your_food_photo">Upload Your Food Photo</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="select_drop_point">Select Drop Point</string>
    <string name="payment_details">Payment Details</string>
    <string name="desc_instruksi_pembayaran">Transfer donation to above Virtual Account</string>
    <string name="back_to_home">Back To Home</string>
    <string name="greeting_message">WELCOME BACK !</string>
    <string name="turahan">Turahan</string>
    <string name="desc_logo">Why waste when there are still many in need?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_as_volunteer">Login as Volunteer</string>
    <string name="notification">Notification</string>
    <string name="order_success">Order Success</string>
    <string name="desc_order_success">Yeayy... Your order is being processed</string>
    <string name="desc_points_get_order_success">You potentially earn</string>
    <string name="thank_you_order_success">Thank you for sharing</string>
    <string name="input_amount">Input Amount</string>
    <string name="instant_pick">Instant Pick</string>
    <string name="proceeds_to_pay">Proceeds to Pay</string>
    <string name="pick_up_information">Pick Up Information</string>
    <string name="pick_another_address">Pick Another Address</string>
    <string name="pick_up">Pick Up</string>
    <string name="pick_location">Pick Location</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="donation_success">Donation Success</string>
    <string name="confirm_donation">Confirm Donation</string>
    <string name="cancel_donation">Cancel Donation</string>
    <string name="campaign_title">Campaign Title</string>
    <string name="pick_campaign_photo">Pick Campaign Photo</string>
    <string name="donation_processed">Donation Processed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel_dialog_confirmation">clicking yes will delete your donation data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="article">Articles</string>
    <string name="claim_your_points">Claim your points</string>
    <string name="profile">PROFILE</string>
    <string name="change_profile">Change Profile</string>
    <string name="security">Security</string>
    <string name="about_app">About App</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="no_transaction">No Transaction</string>
    <string name="read_more">Read More</string>
    <string name="campaign_lists">Campaign Lists</string>
    <string name="nodonation">There Are No Donations Made</string>
    <string name="add_campaign">Add Campaign</string>
    <string name="noCampaign">There\'s No Any Campaign Yet</string>
    <string name="donationreportpr">Donation Report</string>
    <string name="donhistorypr">Donation History</string>
    <string name="foodpickup">Your food is getting picked up, please prepare</string>
    <string name="Disetujui">Approved</string>
    <string name="waitPickUp">Waiting For Pick Up</string>
    <string name="waitDropOff">Waiting For Drop Off</string>
    <string name="donConfirmed">Donation confirmed, you can drop off the food at our address</string>
</resources>