<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomAdressActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:background="@drawable/fragmentcorners"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_alamat_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/pickUpAddressCustomAddress"
            android:textColor="@color/BrownDark"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/default_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_alamat_pickup"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_default_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/BrownDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/defaultAddressCustomAddress"
                android:textAllCaps="false"
                android:textColor="@color/black" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/alamat_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/default_address"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/addressCustomAddress"
                android:textColor="@color/BrownDark" />

            <EditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/BrownDark"
                android:fontFamily="@font/montserrat"
                android:hint="@string/completeAddressHintCustomAddress"
                android:paddingStart="12dp"
                android:textColor="@color/BrownDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alamat_lengkap"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_detail_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_custom_address"
                android:textColor="@color/BrownDark" />

            <EditText
                android:id="@+id/et_detail_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/BrownDark"
                android:fontFamily="@font/montserrat"
                android:hint="@string/guide_custom_address"
                android:paddingStart="12dp"
                android:textColor="@color/BrownDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/judul_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_alamat"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labael_judul_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_title_custom_address"
                android:textColor="@color/BrownDark" />

            <EditText
                android:id="@+id/et_judul_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/BrownDark"
                android:fontFamily="@font/montserrat"
                android:hint="@string/address_title_description_custom_address"
                android:paddingStart="12dp"
                android:textColor="@color/BrownDark" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_donate_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/judul_alamat"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            app:cardBackgroundColor="@color/BrownDark"
            app:cardCornerRadius="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/donateBtnCustomAddress"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>