<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.screens.SecondScreen">

    <ImageView
        android:id="@+id/img_slide_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:src="@drawable/ob_2"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_slide_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_slide_icon"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_slide_description"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_next2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        app:cardBackgroundColor="@color/BrownDark"
        app:layout_constraintBottom_toTopOf="@id/btn_skip2"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_skip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        app:cardBackgroundColor="@color/BrownLight"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_btn"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>