<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".volunteer.VolunteerProfileFragment">

    <TextView
        android:id="@+id/profileappbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/profile"
        android:textColor="#B83B3B"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/profileappbar"
        android:layout_marginTop="13dp"
        android:background="#EDEDED"
        android:elevation="1dp" />

    <RelativeLayout
        android:id="@+id/changeprofilesection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvProfil"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:strokeWidth="1.5dp"
            app:strokeColor="#B83B3B"
            app:cardCornerRadius="100dp"
            android:layout_centerHorizontal="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfil"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_person_24" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvProfil"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/username"
            android:textColor="#B83B3B"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_changeprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/change_profile"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_below="@id/tv_username"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/tv_changeprofile"
            android:src="@drawable/ic_edit" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnLogOut"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/log_out"
            android:textColor="#FF2929"
            android:textSize="17sp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>